# faad2

./: .bazelrc  .gitignore  AUTHORS  BUILD.bazel  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.linux  TODO  WORKSPACE.bazel  bootstrap  cnv_FAAD.nsi  cnv_aacpcm.nsi  configure.ac  configure.in  faad2.spec  faad2.spec.in  in_faad.nsi  in_mp4.nsi  in_mpeg4aac.nsi  libfaad2.def  properties.json  workspace.bzl
CoreAAC/: .cvsignore  AACProfilesName.h  CoreAAC.cpp  CoreAAC.def  CoreAAC.dsp  CoreAAC.dsw  CoreAAC.h  CoreAAC.nsi  CoreAAC.rc  CoreAACAboutProp.cpp  ICoreAAC.h  (+16 more)
common/id3lib/: .cvsignore  AUTHORS  ChangeLog  HISTORY  Makefile.am  Makefile.in  NEWS  THANKS  TODO  acconfig.h  aclocal.m4  config.h.in  config.h.win32.in  config.win32  configure  configure.in  id3lib.spec.in  libtool  mkinstalldirs  reconf
common/id3lib/include/: Makefile.am  Makefile.in  id3.h
common/id3lib/include/id3/: .cvsignore  Makefile.am  Makefile.in  error.h  field.h  flags.h  frame.h  globals.h  header.h  header_frame.h  header_tag.h  int28.h  misc_support.h  sized_types.h  spec.h  tag.h  uint28.h  utils.h
common/id3lib/libprj/: Makefile.am  id3lib.dsp  id3lib.dsw  id3lib.sln  id3lib.vcproj
common/id3lib/m4/: Makefile.am  Makefile.in  lf_bash.m4  lf_cc.m4  lf_cxx.m4  lf_cxx_convenience.m4  lf_fortran.m4  lf_host_type.m4  lf_lisp.m4  lf_local.m4  lf_nm.m4  lf_texidoc.m4  lf_txtc.m4  lf_x11.m4
common/id3lib/src/: .cvsignore  Makefile.am  Makefile.in  c_wrapper.cpp  error.cpp  field.cpp  field_binary.cpp  field_integer.cpp  field_string_ascii.cpp  field_string_unicode.cpp  frame.cpp  frame_parse.cpp  frame_render.cpp  globals.cpp  header.cpp  header_frame.cpp  header_tag.cpp  int28.cpp  misc_support.cpp  spec.cpp  tag.cpp  tag_file.cpp  tag_find.cpp  tag_parse.cpp  tag_parse_lyrics3.cpp  tag_parse_v1.cpp  tag_render.cpp  tag_sync.cpp  uint28.cpp  utils.cpp
common/id3lib/zlib/: Makefile.am  Makefile.in
common/id3lib/zlib/include/: Makefile.am  Makefile.in  deflate.h  zconf.h  zutil.h
common/id3lib/zlib/lib/: Makefile.am  Makefile.in
common/id3lib/zlib/prj/: Makefile.am  Makefile.in  zlib.dsp  zlib.dsw  zlib.mak  zlib.sln  zlib.vcproj
common/id3lib/zlib/src/: Makefile.am  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  gzio.c  trees.c  uncompr.c  zutil.c
common/libsndfile/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  check_libsndfile.py  configure  configure.in  libsndfile_version_convert.py  mkinstalldirs  reconf  sndfile.pc.in
common/libsndfile/MacOS/: Makefile.am  Makefile.in  config.h
common/libsndfile/Win32/: Makefile.am  Makefile.in  Makefile.msvc  config.h  libsndfile.def  libsndfile.dsp  libsndfile.sln  libsndfile.vcproj
common/libsndfile/src/: Makefile.am  Makefile.in  aiff.c  alaw.c  au.c  au.h  au_g72x.c  command.c  common.c  common.h  config.h.in  double64.c  dwvw.c  file_io.c  float32.c  float_cast.h  gsm610.c  ima_adpcm.c  ircam.c  ms_adpcm.c  nist.c  paf.c  pcm.c  raw.c  rx2.c  samplitude.c  sd2.c  sf_command.h  sfendian.h  sndfile.c  sndfile.h  svx.c  txw.c  ulaw.c  voc.c  w64.c  wav.c  wav_w64.c  wav_w64.h
common/libsndfile/src/G72x/: Makefile.am  Makefile.in  g72x.c  g72x.h  g72x_test.c  private.h
common/libsndfile/src/GSM610/: ChangeLog  Makefile.am  Makefile.in  add.c  code.c  config.h  decode.c  gsm.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  private.h  proto.h  rpe.c  short_term.c  table.c  unproto.h
common/mp4ff/: Makefile.am  README_ORIGINAL  atom.c  ctts.c  dinf.c  dref.c  drms.c  drms.h  drmstables.h  edts.c  elst.c  esds.c  funcprotos.h  hdlr.c  iods.c  matrix.c  mdat.c  mdhd.c  mdia.c  minf.c  moov.c  mp4atom.c  mp4ff.c  mp4ff.dsp  mp4ff.h  mp4ff.vcproj  mp4ff_int_types.h  mp4ffint.h  mp4meta.c  mp4sample.c  mp4tagupdate.c  mp4util.c  mvhd.c  private.h  smhd.c  stbl.c  stco.c  stsc.c  stsd.c  stsdtable.c  (+8 more)
common/mp4v2/: API_CHANGES  INTERNALS  Makefile.am  TODO  acconfig.h  atom_meta.cpp  atom_mvhd.cpp  atom_schi.cpp  atom_sinf.cpp  atom_stdp.cpp  atom_stsd.cpp  atom_tag4.cpp  atoms.h  bootstrap  configure.in  descriptors.cpp  descriptors.h  isma.cpp  libmp4v2.dsp  libmp4v260.dsp  libmp4v260.vcproj  libmp4v2_cb.dsp  libmp4v2_cb.vcproj  libmp4v2_st.dsp  libmp4v2_st60.dsp  libmp4v2_st60.vcproj  mp4.cpp  mp4.h  mp4atom.cpp  mp4atom.h  mp4common.h  mp4descriptor.cpp  mp4file.cpp  mp4file.h  mp4file_io.cpp  mp4info.cpp  mp4meta.cpp  mp4property.cpp  mp4property.h  mp4track.cpp  (+9 more)
frontend/: Makefile.am  audio.c  audio.h  faad.dsp  faad.dsw  faad.man  faad.sln  faad.vcproj  getopt.c  main.c  mp4read.c  mp4read.h  unicode_support.c  unicode_support.h  wave_out.c  wave_out.h
libfaad/: Makefile.am  analysis.h  bits.c  bits.h  cfft.c  cfft.h  cfft_tab.h  common.c  common.h  data.c  data.h  debug.h  decoder.c  decoder.h  dither.c  dither.h  drc.c  drc.h  drm_dec.c  drm_dec.h  error.c  error.h  faad2.pc.in  filtbank.c  filtbank.h  fixed.h  hcr.c  huffman.c  huffman.h  ic_predict.c  ic_predict.h  iq_table.h  is.c  is.h  kbd_win.h  libfaad.dsp  libfaad.dsw  libfaad.sln  libfaad.vcproj  libfaad2_dll.dsp  (+67 more)
libfaad/codebook/: hcb.h  hcb_1.c  hcb_1.h  hcb_10.c  hcb_10.h  hcb_11.c  hcb_11.h  hcb_2.c  hcb_2.h  hcb_3.c  hcb_3.h  hcb_4.c  hcb_4.h  hcb_5.c  hcb_5.h  hcb_6.c  hcb_6.h  hcb_7.c  hcb_7.h  hcb_8.c  hcb_8.h  hcb_9.c  hcb_9.h  hcb_sf.c  hcb_sf.h
libfaad/fftw/: Makefile.am  Makefile.in  config.c  config.h  executor.c  fftw-int.h  fftw.h  fftwnd.c  fn_1.c  fn_10.c  fn_11.c  fn_12.c  fn_13.c  fn_14.c  fn_15.c  fn_16.c  fn_2.c  fn_3.c  fn_32.c  fn_4.c  fn_5.c  fn_6.c  fn_64.c  fn_7.c  fn_8.c  fn_9.c  fni_1.c  fni_10.c  fni_11.c  fni_12.c  fni_13.c  fni_14.c  fni_15.c  fni_16.c  fni_2.c  fni_3.c  fni_32.c  fni_4.c  fni_5.c  fni_6.c  (+33 more)
plugins/xmms/: AUTHORS  ChangeLog  INSTALL  Makefile  NEWS  README  aac-XMMS.c  bootstrap  configure.in
plugins/xmms/src/: Makefile.am  Makefile.save  aac_utils.c  aac_utils.h  dialog_gtk1.c  id3.cpp  libaac.c  libmp4.c  mp4_utils.c
plugins/xmmsmp4/src/: Makefile.am  libmp4.c  libmp4_utils.c  libmp4_utils.h
(+166 files in other folders)
